--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+#mainToolbar .toolbar-spacer {
+  flex: 1 1 auto;
+}
+
+#mainToolbar .toolbar-icon {
+  margin: 0 4px;
+  cursor: pointer;
+}
+
+#mainToolbar .toolbar-avatar {
+  background-size: cover;
+  box-shadow: none;
+}
