--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -46,3 +46,13 @@
     </mat-card>
   </mat-grid-tile>
 </mat-grid-list>
+
+<div style="display: flex; flex-direction: row;">
+
+  <!-- there are a few shorthand columns widths as well -->
+
+    <div class="one-half column" style="background: black; ">1/2</div>
+    <div class="one-half column" style="background: green;">1/2</div>
+
+
+</div>
