--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -47,12 +47,11 @@
   </mat-grid-tile>
 </mat-grid-list>
 
-<div style="display: flex; flex-direction: row;">
-
-  <!-- there are a few shorthand columns widths as well -->
-
-    <div class="one-half column" style="background: black; ">1/2</div>
-    <div class="one-half column" style="background: green;">1/2</div>
-
-
+<div class="container">
+  <div class="row">
+    <div class="col-6" style="background: black; ">1/2</div>
+    <div class="col-6" style="background: green;">1/2</div>
+  </div>
 </div>
+
+
