--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -47,11 +47,9 @@
   </mat-grid-tile>
 </mat-grid-list>
 
-<div class="container">
   <div class="row">
-    <div class="col-6" style="background: black; ">1/2</div>
-    <div class="col-6" style="background: green;">1/2</div>
+    <div class="col-12 col-sm-12 col-md-7 col-lg-8 col-xl-8" style="background: black; ">1/2</div>
+    <div class="col-12 col-sm-12 col-md-5 col-lg-4 col-xl-4" style="background: green;">1/2</div>
   </div>
-</div>
 
 
