--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -24,7 +24,7 @@
             </button>
           </mat-form-field>
 
-          <button mat-raised-button color="primary" *ngIf="!user" (click)="signin('xd@xd.com','123456')">
+          <button mat-raised-button color="primary" (click)="signin('xd@xd.com','123456')">
             Login
           </button>
           <br>
@@ -33,12 +33,12 @@
           </div>
           <div class="row d-flex m-auto">
             <div class="col">
-              <button class="custom-button" mat-fab *ngIf="!user" (click)="googleSignin()">
+              <button class="custom-button" mat-fab (click)="googleSignin()">
                 <mat-icon><img src="assets/icons/google-icon.svg" alt=""></mat-icon>
               </button>
             </div>
             <div class="col">
-              <button class="custom-button" mat-fab *ngIf="!user" (click)="msSignin()">
+              <button class="custom-button" mat-fab (click)="msSignin()">
                 <mat-icon><img src="assets/icons/microsoft-icon.svg" alt=""></mat-icon>
               </button>
             </div>
