--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -18,13 +18,13 @@
 
           <mat-form-field>
             <mat-label>Contraseña</mat-label>
-            <input matInput [type]="hide ? 'password' : 'text'">
+            <input matInput [type]="hide ? 'password' : 'text'"  [(ngModel)]="password">
             <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
           </mat-form-field>
 
-          <button mat-raised-button color="primary" (click)="signin('xd@xd.com','123456')">
+          <button mat-raised-button color="primary" (click)="signin()">
             Login
           </button>
           <br>
