--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,16 +1,19 @@
 <mat-toolbar
   id="mainToolbar"
   color="primary">
-  Apolo
-  <span class="toolbar-spacer"></span>
+  <mat-toolbar-row>
+    <button mat-icon-button class="custom-button">
+      <mat-icon><img src="/assets/icons/logo_Apolo-light.svg" alt=""></mat-icon>
+    </button>
 
-  <button
-    mat-mini-fab
-    class="toolbar-avatar"
-    color="primary"
-    [ngStyle]="{ 'background-image': 'url('+user?.photoURL+')' }"
-  >
-
-  </button>
+    <span class="toolbar-spacer"></span>
+    <button
+      mat-mini-fab
+      class="toolbar-avatar"
+      color="primary"
+      [ngStyle]="{ 'background-image': 'url('+user?.photoURL+')' }"
+    >
+    </button>
+  </mat-toolbar-row>
 
 </mat-toolbar>
