--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,3 +16,32 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   background-size: cover;
   box-shadow: none;
 }
+
+.custom-card {
+  border: 4px solid #8E8E8E;
+  display: block;
+  cursor: pointer;
+
+  margin: auto;
+  margin-bottom: 5%;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.card-content {
+  padding: 4%;
+}
+
+.card-title {
+  padding: 2% 4%;
+  border-bottom: 4px solid #8E8E8E;
+  width: 100%;
+
+  h4 {
+    margin-bottom: 0px;
+    font-family: helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 1.1rem;
+    color: #92A9E8;
+  }
+}
