feat: new colors & init exercise circle style

--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,7 +1,6 @@
 <div class="fixed-toolbar">
   <mat-toolbar
-    id="mainToolbar"
-    color="primary">
+    id="mainToolbar">
     <mat-toolbar-row>
       <button mat-icon-button class="custom-button">
         <mat-icon><img src="/assets/icons/logo_Apolo-light.svg" alt=""></mat-icon>
@@ -11,7 +10,6 @@
       <button
         mat-mini-fab
         class="toolbar-avatar"
-        color="primary"
         [ngStyle]="{ 'background-image': 'url('+user?.photoURL+')' }"
       >
       </button>
