--- a/src/app/components/exercises/exercises.component.html
+++ b/src/app/components/exercises/exercises.component.html
@@ -2,15 +2,9 @@
   <div class="row">
     <div class="col-8">
       <!-- List of Lessons to Display - fix!: Component Needed -->
-
-      <div style="background-color: white; display: flex; border-radius: 50%; height: 500px; width: 500px">
-        <img style="margin: auto; height: 500px; width: 500px; padding: 15%; opacity: 0.4" src="/assets/icons/CONTENT/alarm.svg" alt="">
-      </div>
-
-
-      <div class="custom-card" *ngFor="let i of test" routerLink="prueba">
+      <div class="custom-card">
         <div class="card-title">
-          <h4>LECCIÓN No. {{i}}</h4>
+          <h4>Ejercicio No. 1</h4>
         </div>
         <div class="card-content">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod corrupti voluptates tempore molestiae doloribus deleniti debitis, eaque sint repellendus impedit corporis reiciendis accusantium commodi quos rem fugiat veritatis placeat quae.</p>
