--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body { height: 100%; background-color: #AEB8BE; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 #mainToolbar .toolbar-spacer {
@@ -18,7 +18,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .custom-card {
-  border: 4px solid #8E8E8E;
+  border: 4px solid white;
   display: block;
   cursor: pointer;
 
@@ -34,7 +34,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .card-title {
   padding: 2% 4%;
-  border-bottom: 4px solid #8E8E8E;
+  border-bottom: 4px solid white;
   width: 100%;
 
   h4 {
@@ -42,6 +42,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     font-family: helvetica, sans-serif;
     font-weight: bold;
     font-size: 1.1rem;
-    color: #92A9E8;
+    color: #354E5C;
   }
 }
