--- a/src/app/components/exercises/exercises.component.html
+++ b/src/app/components/exercises/exercises.component.html
@@ -1,6 +1,7 @@
 <div class="container custom-container">
   <div class="row">
     <div class="col-8">
+      <mat-icon class="back-button" aria-hidden="false" aria-label="Example home icon">arrow_back</mat-icon>
       <!-- List of Lessons to Display - fix!: Component Needed -->
       <div *ngFor="let e of enunciados" class="custom-card">
         <div class="card-title">
