--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -55,9 +55,9 @@
 }
 
 .lesson-info {
-  margin-left: 50px;
+  margin-left: 20px;
 	position: relative;
-	background: #00aabb;
+	background: #ffffff;
   border-radius: .4em;
   padding: 1rem;
   display: none;
@@ -75,9 +75,9 @@
 	top: 50%;
 	width: 0;
 	height: 0;
-	border: 39px solid transparent;
-	border-right-color: #00aabb;
+	border: 11px solid transparent;
+	border-right-color: #ffffff;
 	border-left: 0;
-	margin-top: -39px;
-	margin-left: -39px;
+	margin-top: -11px;
+	margin-left: -11px;
 }
