Sidebar y header no se muestran en login

--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,6 +1,7 @@
 .login-body {
   background-image: url('/assets/images/cisneros-background.jpg');
   background-size: 73%;
+  height: 100vh;
 }
 
 .login-layout {
