--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-  <div class="row login-body" style="height: 100%; margin: 0px;">
+  <div class="row login-body">
     <div class="col-12 col-sm-12 col-md-12 col-lg-8 col-xl-8 left-login"></div>
     <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 text-align d-flex right-login">
       <div class="custom-card">
