--- a/src/app/components/exercises/exercises.component.html
+++ b/src/app/components/exercises/exercises.component.html
@@ -1,31 +1,36 @@
-<div class="container custom-container">
-  <div class="row">
-    <div class="col-8">
-      <mat-icon class="back-button" (click)="backButton()" aria-hidden="false" aria-label="Example home icon">arrow_back</mat-icon>
-      <!-- List of Lessons to Display - fix!: Component Needed -->
-      <div *ngFor="let pregunta of preguntas | async" class="custom-card" id="{{pregunta.id}}">
-        <div class="card-title">
-          <h4>{{ pregunta.enunciado }}</h4>
-        </div>
-        <div class="card-content">
-          <div class="preguntas">
-            <div *ngFor="let question of pregunta.preguntas" class="pregunta">
-              <div class="pregunta">{{question.pregunta}}</div>
-              <ul class="opciones">
-                <li *ngFor="let opcion of question.respuestas">{{opcion}}</li>
-              </ul>
-              <div class="solucion">{{question.solucion}}</div>
-            </div>
+<div class="navbar navbar-list navbar-light bg-white border-bottom-2 border-bottom navbar-expand-sm" style="white-space: nowrap;">
+  <div class="container page__container">
+      <nav class="nav navbar-nav">
+          <div class="nav-item navbar-list__item">
+              <a (click)="backButton()" class="nav-link h-auto"><i class="material-icons icon--left">keyboard_backspace</i> Volver al curso</a>
           </div>
-          <div class="info">
-            <a>
-              <img src="/assets/icons/CONTENT/magnifying_glass.svg">
-              Más información
-            </a>
+          <div class="nav-item navbar-list__item">
+              <div class="d-flex align-items-center flex-nowrap">
+                  <div class="mr-16pt">
+                      <img [src]="lesson | async | icon" width="40" alt="Angular" class="rounded">
+                  </div>
+                  <div class="flex">
+                      <p class="card-title text-body mb-0">{{ lesson | async | title }}</p>
+                  </div>
+              </div>
           </div>
-        </div>
+      </nav>
+  </div>
+</div>
+<div class="bg-primary pb-lg-64pt py-32pt">
+  <div class="container page__container">
+      <nav class="course-nav">
+          <a href="student-take-lesson.html" data-toggle="tooltip" data-placement="bottom" data-title="Getting Started with Angular: Introduction" data-original-title="" title=""><span class="material-icons">check_circle</span></a>
+          <a data-toggle="tooltip" data-placement="bottom" data-title="Getting Started with Angular: Introduction to TypeScript" href="student-take-lesson.html" data-original-title="" title=""><span class="material-icons">check_circle</span></a>
+          <a data-toggle="tooltip" data-placement="bottom" data-title="Getting Started with Angular: Comparing Angular to AngularJS" href="student-take-lesson.html" data-original-title="" title=""><span class="material-icons">check_circle</span></a>
+          <a href="student-take-quiz.html" data-toggle="tooltip" data-placement="bottom" data-title="Quiz: Getting Started with Angular" data-original-title="" title=""><span class="material-icons text-primary">account_circle</span></a>
+      </nav>
+
+      <div class="d-flex flex-wrap align-items-end justify-content-end mb-16pt">
+          <h1 class="text-white flex m-0">Question 1 of 5</h1>
+          <p class="h1 text-white-50 font-weight-light m-0">00:14</p>
       </div>
-    </div>
-    <app-right-info class="col-4"></app-right-info>
+
+      <p class="hero__lead measure-hero-lead text-white-50">An angular 2 project written in typescript is* transpiled to javascript duri*ng the build process. Which of the following additional features are provided to the developer while programming on typescript over javascript?</p>
   </div>
 </div>
