--- a/src/app/components/exercises/exercises.component.html
+++ b/src/app/components/exercises/exercises.component.html
@@ -1,36 +1,110 @@
-<div class="navbar navbar-list navbar-light bg-white border-bottom-2 border-bottom navbar-expand-sm" style="white-space: nowrap;">
+<div class="navbar navbar-list navbar-light bg-white border-bottom-2 border-bottom navbar-expand-sm"
+  style="white-space: nowrap;">
   <div class="container page__container">
-      <nav class="nav navbar-nav">
-          <div class="nav-item navbar-list__item">
-              <a (click)="backButton()" class="nav-link h-auto"><i class="material-icons icon--left">keyboard_backspace</i> Volver al curso</a>
+    <nav class="nav navbar-nav">
+      <div class="nav-item navbar-list__item">
+        <a (click)="backButton()" class="nav-link h-auto"><i class="material-icons icon--left">keyboard_backspace</i>
+          Volver al curso</a>
+      </div>
+      <div class="nav-item navbar-list__item">
+        <div class="d-flex align-items-center flex-nowrap">
+          <div class="mr-16pt">
+            <img [src]="lesson | async | icon" width="40" alt="Angular" class="rounded">
           </div>
-          <div class="nav-item navbar-list__item">
-              <div class="d-flex align-items-center flex-nowrap">
-                  <div class="mr-16pt">
-                      <img [src]="lesson | async | icon" width="40" alt="Angular" class="rounded">
-                  </div>
-                  <div class="flex">
-                      <p class="card-title text-body mb-0">{{ lesson | async | title }}</p>
-                  </div>
-              </div>
+          <div class="flex">
+            <p class="card-title text-body mb-0">{{ lesson | async | title }}</p>
           </div>
-      </nav>
+        </div>
+      </div>
+    </nav>
   </div>
 </div>
 <div class="bg-primary pb-lg-64pt py-32pt">
   <div class="container page__container">
-      <nav class="course-nav">
-          <a href="student-take-lesson.html" data-toggle="tooltip" data-placement="bottom" data-title="Getting Started with Angular: Introduction" data-original-title="" title=""><span class="material-icons">check_circle</span></a>
-          <a data-toggle="tooltip" data-placement="bottom" data-title="Getting Started with Angular: Introduction to TypeScript" href="student-take-lesson.html" data-original-title="" title=""><span class="material-icons">check_circle</span></a>
-          <a data-toggle="tooltip" data-placement="bottom" data-title="Getting Started with Angular: Comparing Angular to AngularJS" href="student-take-lesson.html" data-original-title="" title=""><span class="material-icons">check_circle</span></a>
-          <a href="student-take-quiz.html" data-toggle="tooltip" data-placement="bottom" data-title="Quiz: Getting Started with Angular" data-original-title="" title=""><span class="material-icons text-primary">account_circle</span></a>
-      </nav>
+    <nav class="course-nav">
+      <a href="student-take-lesson.html" data-toggle="tooltip" data-placement="bottom"
+        data-title="Getting Started with Angular: Introduction" data-original-title="" title=""><span
+          class="material-icons">check_circle</span></a>
+      <a data-toggle="tooltip" data-placement="bottom"
+        data-title="Getting Started with Angular: Introduction to TypeScript" href="student-take-lesson.html"
+        data-original-title="" title=""><span class="material-icons">cancel</span></a>
+      <a data-toggle="tooltip" data-placement="bottom"
+        data-title="Getting Started with Angular: Comparing Angular to AngularJS" href="student-take-lesson.html"
+        data-original-title="" title=""><span class="material-icons">check_circle</span></a>
+      <a href="student-take-quiz.html" data-toggle="tooltip" data-placement="bottom"
+        data-title="Quiz: Getting Started with Angular" data-original-title="" title=""><span
+          class="material-icons text-primary">account_circle</span></a>
+    </nav>
 
-      <div class="d-flex flex-wrap align-items-end justify-content-end mb-16pt">
-          <h1 class="text-white flex m-0">Question 1 of 5</h1>
-          <p class="h1 text-white-50 font-weight-light m-0">00:14</p>
+    <div class="js-player bg-primary embed-responsive embed-responsive-16by9 mb-32pt" data-domfactory-upgraded="player">
+      <div class="player embed-responsive-item">
+        <div class="player__content">
+          <div class="player__image" style="--player-image: url(public/images/illustration/player.svg)"></div>
+          <a href="" class="player__play bg-primary">
+            <span class="material-icons">play_arrow</span>
+          </a>
+        </div>
+        <div class="player__embed d-none">
+          <iframe class="embed-responsive-item"
+            src="https://player.vimeo.com/video/97243285?title=0&amp;byline=0&amp;portrait=0"
+            allowfullscreen=""></iframe>
+        </div>
       </div>
+    </div>
 
-      <p class="hero__lead measure-hero-lead text-white-50">An angular 2 project written in typescript is* transpiled to javascript duri*ng the build process. Which of the following additional features are provided to the developer while programming on typescript over javascript?</p>
+    <div class="d-flex flex-wrap align-items-end justify-content-end mb-16pt">
+      <h1 class="text-white flex m-0">Question 1 of 5</h1>
+      <!-- <p class="h1 text-white-50 font-weight-light m-0">00:14</p> -->
+    </div>
+
+    <p class="hero__lead measure-hero-lead text-white-50">An angular 2 project written in typescript is* transpiled to
+      javascript duri*ng the build process. Which of the following additional features are provided to the developer
+      while programming on typescript over javascript?</p>
+    <a href="" class="btn btn-white">Resume lesson</a>
+  </div>
+</div>
+<div class="navbar navbar-expand-md navbar-list navbar-light bg-white border-bottom-2 " style="white-space: nowrap;">
+  <div class="container page__container">
+    <ul class="nav navbar-nav flex navbar-list__item">
+      <li class="nav-item">
+        <i class="material-icons text-50 mr-8pt">tune</i>
+        Choose the correct answer below:
+      </li>
+    </ul>
+    <div class="nav navbar-nav ml-sm-auto navbar-list__item">
+      <div class="nav-item d-flex flex-column flex-sm-row ml-sm-16pt">
+        <a href="student-quiz-result-details.html"
+          class="btn justify-content-center btn-accent w-100 w-sm-auto mb-16pt mb-sm-0 ml-sm-16pt">Siguente pregunta <i
+            class="material-icons icon--right">keyboard_arrow_right</i></a>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container page__container">
+  <div class="page-section">
+    <div class="page-separator">
+      <div class="page-separator__text">Your Answer</div>
+    </div>
+    <div class="form-group">
+      <div class="custom-control custom-checkbox">
+        <input id="customCheck01" type="checkbox" class="custom-control-input">
+        <label for="customCheck01" class="custom-control-label">Ability to use newer syntax and offers
+          reliability</label>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="custom-control custom-checkbox">
+        <input id="customCheck02" type="checkbox" class="custom-control-input" checked="">
+        <label for="customCheck02" class="custom-control-label">Compatibility</label>
+      </div>
+    </div>
+    <div class="form-group mb-32pt mb-lg-48pt">
+      <div class="custom-control custom-checkbox">
+        <input id="customCheck03" type="checkbox" class="custom-control-input">
+        <label for="customCheck03" class="custom-control-label">Usage of missing features</label>
+      </div>
+    </div>
+
+    <p class="text-50 mb-0">Note: There can be multiple correct answers to this question.</p>
   </div>
 </div>
