--- a/src/app/components/exercises/exercises.component.scss
+++ b/src/app/components/exercises/exercises.component.scss
@@ -1,33 +1,14 @@
-.custom-container {
-  height: 100%;
-  margin-top: 7%;
-
-  .row {
-    height: 100%;
-  }
+.course-nav div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 100px;
+  background-color: #f5f7fa;
 }
 
-.info {
-  float: right;
-  align-items: flex-end;
-  margin-right: 0px;
-  cursor: pointer;
-
-  a {
-    font-family: helvetica, sans-serif;
-    font-weight: bold;
-    font-size: 0.9rem;
-    color: #8E8E8E;
-
-    img {
-      height: 15px;
-      width: auto;
-    }
-  }
-}
-
-.back-button {
-  position: fixed;
-  top: 105px;
-  left: 23px;
+.course-nav .material-icons {
+  font-size: 1rem;
+  color: rgba(39,44,51,.7);
 }
