Titulo faltante arreglado

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,7 +17,7 @@
                                 <img src="{{lesson.icon}}" width="40" height="40" alt="Angular" class="rounded">
                             </div>
                             <div class="media-body">
-                                <div class="card-title mb-0">Learn Sketch</div>
+                                <div class="card-title mb-0">{{lesson.titulo}}</div>
                                 <p class="lh-1 mb-0">
                                     <span class="text-50 small">{{lesson.year}}° </span>
                                     <span class="text-50 small font-weight-bold">grado</span>
