--- a/src/app/components/exercises/exercises.component.scss
+++ b/src/app/components/exercises/exercises.component.scss
@@ -12,3 +12,11 @@
   font-size: 1rem;
   color: rgba(39,44,51,.7);
 }
+
+.nav-link {
+  cursor: pointer;
+}
+
+.counter {
+  height: 5rem !important;
+}
