--- a/src/app/components/exercises/exercises.component.html
+++ b/src/app/components/exercises/exercises.component.html
@@ -9,7 +9,7 @@
       <div class="nav-item navbar-list__item">
         <div class="d-flex align-items-center flex-nowrap">
           <div class="mr-16pt">
-            <img [src]="lesson | async | icon" width="40" alt="Angular" class="rounded">
+            <img [src]="lesson | async | icon" width="40" alt="{{(lesson | async)?.titulo}}" class="rounded">
           </div>
           <div class="flex">
             <p class="card-title text-body mb-0">{{ lesson | async | title }}</p>
@@ -19,16 +19,22 @@
     </nav>
   </div>
 </div>
-<div *ngFor="let seccion of secciones | async; let i = index; let l = count" class="section">
-  <div class="bg-primary pb-lg-64pt py-32pt">
+<div class="bg-primary pb-4pt pt-32pt counter">
+  <div class="container page__container">
+    <nav class="course-nav">
+      <div *ngFor="let j of [].constructor((secciones | async)?.length); let k = index">
+        <span class="material-icons"
+          [ngClass]="{'text-success': k < currentQuestion, 'text-primary': k === currentQuestion}">help</span>
+      </div>
+    </nav>
+  </div>
+</div>
+<div *ngFor="let seccion of secciones | async; let i = index; let l = count" class="section"
+  [ngClass]="{'d-none': i != currentQuestion}">
+  <div class="bg-primary pb-lg-64pt pt-8pt">
     <div class="container page__container">
-      <nav class="course-nav">
-        <div *ngFor="let j of [].constructor(l); let k = index">
-          <span class="material-icons" [ngClass]="{'text-success': k < i, 'text-primary': k === i}">help</span>
-        </div>
-      </nav>
-  
-      <div class="js-player bg-primary embed-responsive embed-responsive-16by9 mb-32pt" data-domfactory-upgraded="player">
+      <div class="js-player bg-primary embed-responsive embed-responsive-16by9 mb-32pt"
+        data-domfactory-upgraded="player">
         <div class="player embed-responsive-item">
           <div class="player__content">
             <div class="player__image" style="--player-image: url(public/images/illustration/player.svg)"></div>
@@ -43,12 +49,12 @@
           </div>
         </div>
       </div>
-  
+
       <div class="d-flex flex-wrap align-items-end justify-content-end mb-16pt">
         <h1 class="text-white flex m-0">Sección {{i + 1}} de {{l}}</h1>
-        <!-- <p class="h1 text-white-50 font-weight-light m-0">00:14</p> -->
+        <p class="h1 text-white-50 font-weight-light m-0">{{ time }}</p>
       </div>
-  
+
       <p class="hero__lead measure-hero-lead text-white-50">{{ seccion.enunciado }}</p>
       <button class="btn btn-white">Reproducir Audio</button>
     </div>
@@ -63,9 +69,11 @@
       </ul>
       <div class="nav navbar-nav ml-sm-auto navbar-list__item">
         <div class="nav-item d-flex flex-column flex-sm-row ml-sm-16pt">
-          <a href="student-quiz-result-details.html"
-            class="btn justify-content-center btn-accent w-100 w-sm-auto mb-16pt mb-sm-0 ml-sm-16pt">Siguente pregunta <i
-              class="material-icons icon--right">keyboard_arrow_right</i></a>
+          <button (click)="nextQuestion()"
+            class="btn justify-content-center btn-accent w-100 w-sm-auto mb-16pt mb-sm-0 ml-sm-16pt">
+            {{ currentQuestion < l - 1 ? 'Siguente pregunta' : 'Enviar' }}
+            <i class="material-icons icon--right">keyboard_arrow_right</i>
+          </button>
         </div>
       </div>
     </div>
@@ -77,7 +85,8 @@
       </div>
       <div *ngFor="let opcion of pregunta.respuestas; let n = index" class="form-group">
         <div class="custom-control custom-radio">
-          <input id="opcion{{n}}pregunta{{m}}seccion{{i}}" name="pregunta{{m}}seccion{{i}}" type="radio" class="custom-control-input">
+          <input id="opcion{{n}}pregunta{{m}}seccion{{i}}" name="pregunta{{m}}seccion{{i}}" type="radio"
+            class="custom-control-input">
           <label for="opcion{{n}}pregunta{{m}}seccion{{i}}" class="custom-control-label">{{opcion}}</label>
         </div>
       </div>
@@ -86,3 +95,4 @@
 </div>
 
 <pre>{{ secciones | async | json }}</pre>
+<pre>{{ form.getRawValue() | json }}</pre>
