--- a/src/app/components/forum/forum.component.html
+++ b/src/app/components/forum/forum.component.html
@@ -74,8 +74,8 @@
           </div>
 
           <div class="list-group list-group-flush">
-              <h1> {{ user | async | json}} </h1>
-              <div class="list-group-item p-3">
+
+              <div *ngFor="let question of (questions | async)" class="list-group-item p-3">
                   <div class="row align-items-start">
                       <div class="col-md-3 mb-8pt mb-md-0">
                           <div class="media align-items-center">
@@ -88,7 +88,7 @@
                               </div>
                               <div class="d-flex flex-column media-body media-middle">
                                   <a href=""
-                                     class="card-title">Laza Bogdan</a>
+                                     class="card-title">{{ (getUserInfo(question.madeby) | async)?.displayName }} </a>
                                   <small class="text-muted">2 days ago</small>
                               </div>
                           </div>
