--- a/src/app/components/teacher-home/teacher-home.component.html
+++ b/src/app/components/teacher-home/teacher-home.component.html
@@ -35,15 +35,14 @@
                   <div *ngIf="(clase | clase | async) as class"
                     class="card card-sm card--elevated p-relative o-hidden overlay overlay--primary-dodger-blue js-overlay card-group-row__card"
                     data-trigger="click">
-                    <a href="profesor/{{clase | idClase}}" class="card-img-top js-image" data-position=""
-                      data-height="140">
-                      <img src="../../assets/images/paths/angular_430x168.png" alt="course">
-                    </a>
+                    <a href="profesor/{{clase | idClase}}" class="js-image" data-position="center" data-height="auto" data-domfactory-upgraded="image" style="display: block; position: relative; overflow: hidden; background-image: url(&quot;../../assets/images/640x426class.jpg&quot;); background-size: cover; background-position: center center; height: 168px;">
+                      <img src="../../public/images/640x426class.jpg" alt="course" style="visibility: hidden;">
+                  </a>
                     <div class="card-body flex">
                       <div class="d-flex">
                         <div class="flex">
                           <a class="card-title"
-                            href="profeosr/{{(clase | idClase)}}">{{ class.coursename }}</a>
+                            href="profesor/{{(clase | idClase)}}">{{ class.coursename }}</a>
                           <small class="text-50 font-weight-bold mb-4pt"> {{ user.displayName }}</small>
                         </div>
                       </div>
